I finally got sql working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 2.8.12.2)
 project (Atlas)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
-add_executable(Atlas main.c)
+add_executable(Atlas backend_init.c)
 # Sqlite3
 find_package (SQLite3 REQUIRED)
 if (SQLITE3_FOUND)
